# Cuebit

./: .gitignore  README.md  cuebit_dashboard.py  example_delete.py  example_usage.py  exported_prompts.json  pyproject.toml  requirements.txt
cuebit/: cli.py  registry.py  server.py
examples/: e2e_example.py  register_prompts.py  summarization_app.py
tests/: __init__.py  conftest.py
