[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuebit"
version = "0.1.0"
description = "Prompt Template Manager with CLI and FastAPI UI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
]

[project.scripts]
cuebit = "cuebit.cli:main"